// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs.Tab should not render styles when unstyled prop is set 1`] = `
.emotion-1 {
  color: #3b3f45;
  margin: 0;
  margin: 0 0 3.2rem;
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 400;
  font-size: 1.8rem;
  line-height: 1.5555555555555556;
}

<div>
  <section
    class="emotion-0"
    role="tabpanel"
    tabindex="-1"
  >
    <p
      class="Nautilus-Paragraph emotion-1"
    >
      Puppies are cute.
    </p>
  </section>
</div>
`;

exports[`Tabs.Tab should render styles for a Tabs.Tab 1`] = `
.emotion-0 {
  display: none;
}

.emotion-0:focus {
  box-shadow: 0 0 0 0.4rem #f5bbda;
  outline: 0;
}

.emotion-1 {
  color: #3b3f45;
  margin: 0;
  margin: 0 0 3.2rem;
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 400;
  font-size: 1.8rem;
  line-height: 1.5555555555555556;
}

<div>
  <section
    class="emotion-0"
    role="tabpanel"
    tabindex="-1"
  >
    <p
      class="Nautilus-Paragraph emotion-1"
    >
      Puppies are cute.
    </p>
  </section>
</div>
`;
